# secret-sharing

./: .gitignore  Cargo.toml  HOWTO.md  LICENSE  PERFORMANCE.md  PERF_FORK.md  README.md  THEORY.md
.claude/agents/: ad-secret-sharing.md
.codex/agents/: ad-secret-sharing.toml
assets/: ship_of_fools.pbm  ship_of_fools.ppm
benchmarks/: pilot_ss_dyson.md  pilot_ss_latest.md  pilot_ss_twilight.md  pilot_ss_wigner.md  threshold_dispatch_impact.md  window_method_impact.md
bib/: references.bib
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cpp/.cache/clangd/index/: bigint.cpp.B92360FD04DF5FF5.idx  bigint.hpp.D97D5D172BECB64C.idx  csprng.cpp.B0B3736AA2333ECE.idx  csprng.hpp.5F1DC632E5668298.idx  field.cpp.AEAA8CE5A670C8C4.idx  field.hpp.B3E98AF5A51260FC.idx  pilot_ss.cpp.5FE5B33241A01874.idx  poly.cpp.076BE239B977C0B1.idx  poly.hpp.EC108BD73DDE9822.idx  shamir.cpp.010F850A2717FC2E.idx  shamir.hpp.05FDF96409BEA36F.idx  test_bigint.cpp.B83AF45EC4A98891.idx  test_compat.cpp.88062E42FAAD50E5.idx  test_csprng.cpp.159B79A21026E118.idx  test_field.cpp.49739087D479626B.idx  test_poly.cpp.BE30C51E865118B2.idx  test_shamir.cpp.9641B5D3013CE133.idx
cpp/benchmarks/: moore_linux_results.md  rust_vs_cpp.md
cpp/fuzz/: CMakeLists.txt  fuzz_bigint.cpp  fuzz_field.cpp  fuzz_shamir.cpp
cpp/include/secret_sharing/: bigint.hpp  csprng.hpp  field.hpp  poly.hpp  shamir.hpp
cpp/scripts/: bench_compare.sh  fuzz.sh  infer.sh  lint.sh
cpp/src/: bench_field_mul.cpp  bigint.cpp  csprng.cpp  field.cpp  pilot_ss.cpp  poly.cpp  shamir.cpp
cpp/test/: CMakeLists.txt  test_bigint.cpp  test_compat.cpp  test_csprng.cpp  test_field.cpp  test_poly.cpp  test_shamir.cpp
examples/: bench.rs  bench_field_mul.rs  dump_compat_vectors.rs  verify_ship.sh  verify_ship_color.sh  visual_ship.rs  visual_ship_color.rs
pilot_result_20260504_061312/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061316/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061317/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061321/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061333/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061338/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061344/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061346/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061354/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061355/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061400/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061403/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061406/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061450/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061452/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061456/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061458/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061500/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061503/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061506/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061507/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061508/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061509/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061510/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061512/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061514/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061517/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061520/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061522/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv
pilot_result_20260504_061523/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061528/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
pilot_result_20260504_061534/: pi_results.csv  readings.csv  rounds.csv  session_log.txt  summary.csv  unit_readings.csv
scripts/: bench_pilot.sh
src/: asmuth_bloom.rs  benaloh_leichter.rs  bigint.rs  blakley.rs  blakley_meadows.rs  brickell.rs  bytes.rs  cgma_vss.rs  csprng.rs  decode.rs  field.rs  ida.rs  ito.rs  karchmer_wigderson.rs  kgh.rs  kothari.rs  lib.rs  massey.rs  mignotte.rs  poly.rs  primes.rs  proactive.rs  ramp.rs  secure.rs  shamir.rs  trivial.rs  visual.rs  vss.rs  yamamoto.rs
tests/: integration.rs
